@@ -8,6 +8,7 @@
 - Added binning 4x4
 - It's now possible to specify right ascension in h:m:s format and
   convert it to floating point value
+- It's now possible to specify initial task state: 0(waiting) or 1(new)
 
 0.2.2 (2016-01-18)
 - Slightly modified filter designations:
